# libFPE

./: CMakeLists.txt  README.md  copySourceToLinux.ps1  main.sln
Tests/: CMakeLists.txt  Common.cpp  Common.h  FpeEncDecTests.cpp  FpeEncDecTests.h  Tests.vcxproj.vcxproj
TestsVS/: TestsVS.cpp  TestsVS.vcxproj
cryptoTools/: CMakeLists.txt  cryptoTools.vcxproj  cryptoTools.vcxproj.filters
cryptoTools/Common/: CLP.h  CuckooIndex.cpp  Defines.h  MatrixView.h  Timer.cpp  Timer.h
cryptoTools/Crypto/: AES.cpp  AES.h  Commit.h  Curve.cpp  PRNG.h  sha1.cpp  sha1.h
cryptoTools/Network/: Channel.cpp  Channel.h  IOService.cpp  IOService.h  IoBuffer.h  SocketAdapter.h
frontend/: CMakeLists.txt  frontend.vcxproj  frontend.vcxproj.filters  main.cpp
libFPE/: CMakeLists.txt  FpeUtils.h  libFPE.vcxproj.vcxproj
libFPE/DTP/: DTP.cpp  DTP.h
libFPE/Feistel/: FF3.cpp  FF3.h
